deps = [dependency('sdl2'), dependency('sdl2_image'), dependency('sdl2_ttf')]
lib_sources = ['engine.cpp', 'Scene/layer.cpp', 'Scene/scene.cpp', 'Object/gameobject.cpp', 'Object/image.cpp', 'UI/label.cpp', 'UI/button.cpp', 'Settings/settings.cpp']
libs = [library('MinervaEngine', lib_sources, include_directories : incdir, dependencies: deps)]